solvers/TCS-Meiji/td-validate-master/test/valid/web2.td
s td 4 3 5
b 1 1 2 3
b 2 2 3 4
b 3 3 4 5
b 4
1 2
2 3
2 4
