solvers/TCS-Meiji/td-validate-master/test/invalid/edge-before-s.td
1 2
s td 4 3 5
b 1 1 2 3
b 2 2 3 4
b 3 3 4 5
b 4
2 3
2 4
